@@ -55,7 +55,7 @@ import org.gjt.sp.util.Log;
  *
  * @author Slava Pestov
  * @author John Gellene (API documentation)
- * @version $Id: JEditTextArea.java,v 1.319 2004/07/22 00:55:26 spestov Exp $
+ * @version $Id: JEditTextArea.java,v 1.320 2004/08/12 22:42:45 spestov Exp $
  */
 public class JEditTextArea extends JComponent
 {
@@ -2386,17 +2386,21 @@ forward_scan:		do
 	 */
 	public void goToNextBracket(boolean select)
 	{
-		String text = getText(caret,buffer.getLength() - caret - 1);
-
 		int newCaret = -1;
 
-loop:		for(int i = 0; i < text.length(); i++)
+		if(caret != buffer.getLength())
 		{
-			switch(text.charAt(i))
+			String text = getText(caret,buffer.getLength()
+				- caret - 1);
+
+loop:			for(int i = 0; i < text.length(); i++)
 			{
-			case ')': case ']': case '}':
-				newCaret = caret + i + 1;
-				break loop;
+				switch(text.charAt(i))
+				{
+				case ')': case ']': case '}':
+					newCaret = caret + i + 1;
+					break loop;
+				}
 			}
 		}
 
